--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>My name is Blake and I'm currently living in northern Indiana. I'm working towards become a web developer after working in technology from the hardware side for several years. In my free time I enjoy listening to and creating music, playing video games, and snowboarding which is easier said than done most of the time in Indiana. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p></p>
 							</article>
 
 						<!-- Work -->
@@ -89,7 +89,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="mailto:gandyb98@gmail.com" class="icon brands fa-gmail-f"><span class="label">Email</span></a></li>
+									<li><a href="mailto:gandyb98@gmail.com" class="icon brands fa-envelope-open-o"><span class="label">Email</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.linkedin.com/in/blake-gandy/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/blakegandy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
