--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="mailto:gandyb98@gmail.com" class="icon brands fa-envelope-open-o"><span class="label">Email</span></a></li>
+									<li><a href="mailto:gandyb98@gmail.com" class="icon brands fa-envelope-open-o-f"><span class="label">Email</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.linkedin.com/in/blake-gandy/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/blakegandy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
