adds background images, text to several pages and new contact buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#skills">Skills</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -45,24 +45,31 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>My name is Blake and I'm currently living in northern Indiana. I'm working towards become a web developer after working in technology from the hardware side for several years. In my free time I enjoy listening to and creating music, playing video games, and snowboarding which is easier said than done most of the time in Indiana. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<span class="image main"><img src="images/me.png" alt="" /></span>
+								<p>My name is Blake and I'm currently living in northern Indiana. I'm working towards become a web developer after working in technology from the hardware side for several years. In my free time I enjoy listening to and creating music, playing video games, and snowboarding which is easier said than done most of the time in Indiana.</p>
 								<p></p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<!-- Skills -->
+							<article id="skills">
+								<h2 class="major">Skills</h2>
+								<span class="image main"><img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80" alt="" /></span>
+								<p><ul>
+									<li>Ruby</li>
+									<li>Ruby On Rails</li>
+									<li>CSS</li>
+									<li>Javascript</li>
+								</ul>
+
+								</li></p>
+								<p></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>My name is Blake and I'm currently living in northern Indiana. I'm a web developer-to-be currently studying in a coding bootcamp. Before making the jump to programming I was working on the hardware side of computers when I became interested in learning more about how software in general functioned and how it was built.Now I am on the path to creating my own applications and programs with the goal of bringing together my knowledge of how the physical components interact with the digital ones to create efficient, versatile solutions.</p>
+								<span class="image main"><img src="images/snowboarding.jpg" alt="" /></span>
+								<p>I'm a web developer-to-be currently studying in a coding bootcamp. Before making the jump to programming I was working on the hardware side of computers when I became interested in learning more about how software in general functioned and how it was built.Now I am on the path to creating my own applications and programs with the goal of bringing together my knowledge of how the physical components interact with the digital ones to create efficient, versatile solutions.</p>
 							</article>
 
 						<!-- Contact -->
@@ -89,7 +96,6 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="mailto:gandyb98@gmail.com" class="icon brands fa-envelope-open-o-f"><span class="label">Email</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.linkedin.com/in/blake-gandy/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/blakegandy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
